Update Прогнозирование оттока клиента Банка.ipynb

--- a/Прогнозирование оттока клиента Банка/Прогнозирование оттока клиента Банка.ipynb
+++ b/Прогнозирование оттока клиента Банка/Прогнозирование оттока клиента Банка.ipynb
@@ -23,14 +23,15 @@
    "source": [
     "Из «Бета-Банка» стали уходить клиенты. Каждый месяц. Немного, но заметно. Банковские маркетологи посчитали: сохранять текущих клиентов дешевле, чем привлекать новых.\n",
     "\n",
-    "Нужно спрогнозировать, уйдёт клиент из банка в ближайшее время или нет. Предоставлены исторические данные о поведении клиентов и расторжении договоров с банком. \n",
+    "Нужно спрогнозировать, уйдёт клиент из банка в ближайшее время или нет. Предоставлены исторические данные о поведении клиентов и расторжении договоров с банком.\n",
     "\n",
-    "**Цели:**\n",
-    "- Построить модель с предельно большим значением *F1*-меры. Нужно довести метрику до 0.59. Проверить *F1*-меру на тестовой выборке.\n",
+    "Цели:\n",
     "\n",
-    "- Дополнительно измерить *AUC-ROC*, сравнить её значение с *F1*-мерой.\n",
+    "Построить модель с предельно большим значением F1-меры. Нужно довести метрику до 0.59. Проверить F1-меру на тестовой выборке.\n",
     "\n",
-    "Источник данных: [https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling](https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling)"
+    "Дополнительно измерить AUC-ROC, сравнить её значение с F1-мерой.\n",
+    "\n",
+    "Источник данных: https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling"
    ]
   },
   {
@@ -322,18 +323,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Избавлюсь от ненужных столбцов\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRowNumber\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCustomerId\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSurname\u001b[39m\u001b[38;5;124m'\u001b[39m] , axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      3\u001b[0m data\u001b[38;5;241m.\u001b[39minfo()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   CreditScore      10000 non-null  int64  \n",
+      " 1   Geography        10000 non-null  object \n",
+      " 2   Gender           10000 non-null  object \n",
+      " 3   Age              10000 non-null  int64  \n",
+      " 4   Tenure           10000 non-null  float64\n",
+      " 5   Balance          10000 non-null  float64\n",
+      " 6   NumOfProducts    10000 non-null  int64  \n",
+      " 7   HasCrCard        10000 non-null  int64  \n",
+      " 8   IsActiveMember   10000 non-null  int64  \n",
+      " 9   EstimatedSalary  10000 non-null  float64\n",
+      " 10  Exited           10000 non-null  int64  \n",
+      "dtypes: float64(3), int64(6), object(2)\n",
+      "memory usage: 859.5+ KB\n"
      ]
     }
    ],
@@ -349,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Преобразую категориальные признаки в численные, техникой прямого кодирования.  \n",
+    "# Преобразую категориальные признаки в численные техникой прямого кодирования.  \n",
     "data_ohe = pd.get_dummies (data, drop_first= True )"
    ]
   },
@@ -824,7 +838,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\">\n",
-    "В процессе предобработки данных, выполнил следующее:\n",
+    "В процессе предобработки данных, провёл следующую работу:\n",
     "    \n",
     "- избавился от пропусков в столбце Tenure (сколько лет клиент работает с банком), заменив их медианным значением,\n",
     "- преобразовал категориальные признаки (столбцы Surname (фамилия), Geography (страна проживания) и Gender (пол) в численные, техникой прямого кодирования,\n",
@@ -870,14 +884,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Имею довольно сильный дисбаланс (четырёхкратный), с которым в дальнейшем необходимо будет поработать."
+    "Имеется довольно сильный дисбаланс (четырёхкратный), с которым в дальнейшем необходимо будет поработать."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Так как у наших признаков 'CreditScore', 'Age', 'Tenure', 'Balance', 'EstimatedSalary' разный масштаб, их необходимо стандартизовать (масштабировать) с помощью StandardScaler."
+    "Так как у признаков 'CreditScore', 'Age', 'Tenure', 'Balance', 'EstimatedSalary' разный масштаб, их необходимо стандартизовать (масштабировать) с помощью StandardScaler."
    ]
   },
   {
@@ -1038,9 +1052,9 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\">\n",
-    "Для бизнеса важно спрогнозировать, уйдёт ли клиент из банка в ближайшее время, или нет (т.е. спрогнозировать 1, положительный ответ (класс)). Для оценки качества прогноза положительного класса, использую метрики \"Полнота\" (Recall, описывает, как хорошо модель разобралась в особенностях этого положительного класса и распознала его) и \"Точность\" (Precision, выявляет, не переусердствует ли модель, присваивая положительные метки). Но используется F1-мера, а она агрегирует обе эти метрики.\n",
+    "Для бизнеса важно спрогнозировать, уйдёт ли клиент из банка в ближайшее время, или нет (т.е. спрогнозировать 1, положительный ответ (класс)). Для оценки качества прогноза положительного класса, используются метрики \"Полнота\" (Recall, описывает, как хорошо модель разобралась в особенностях этого положительного класса и распознала его) и \"Точность\" (Precision, выявляет, не переусердствует ли модель, присваивая положительные метки). Но я использую F1-меру, а она агрегирует обе эти метрики.\n",
     "\n",
-    "Метрика качества AUC-ROC показывает, как сильно наша модель отличается от случайной (AUC-ROC случайной модели равна 0.5).\n",
+    "Метрика качества AUC-ROC показывает, как сильно модель отличается от случайной (AUC-ROC случайной модели равна 0.5).\n",
     "\n",
     "</div>"
    ]
@@ -1153,7 +1167,7 @@
    "source": [
     "Показатели данной модели значительно выше. F1-мера уже поднялась до 0,55, но ниже пока требуемого значения в 0,59. Метрика AUC-ROC получилась уже 0,81. Оптимальная глубина дерева - 7.\n",
     "\n",
-    "F1-мера модели DummyClassifier (0.7965) выше, чем наша 0.56, данная модель неадекватна и неэффективна."
+    "F1-мера модели DummyClassifier (0.7965) выше, чем 0.56, данная модель неадекватна и неэффективна."
    ]
   },
   {
@@ -1305,7 +1319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "F1-мера хотя и выше, чем у модели с дисбалансом, но ещё не превысила необходимый нам порог в 0,59.\n",
+    "F1-мера хотя и выше, чем у модели с дисбалансом, но ещё не превысила необходимый мне порог в 0,59.\n",
     "\n",
     "AUC-ROC наоборот немного ухудшилась (0,7357 против 0,7504 у модели с дисбалансом)."
    ]
@@ -1657,7 +1671,7 @@
    "metadata": {},
    "source": [
     "F1 немного проигрывает регрессии с даунсемплингом, но лучше двух остальных (с дисбалансом и с апсемплингом) (0,4748), до уровня 0,59 не дотягивает.\n",
-    "AUC-ROC здесь получили немного лучше даунсемплинга."
+    "AUC-ROC здесь получил немного лучше даунсемплинга."
    ]
   },
   {
@@ -1716,7 +1730,7 @@
    "source": [
     "F1 получил даже хуже, чем в модели без какого-либо устранения дисбаланса (0,55338).\n",
     "\n",
-    "AUC-ROC имеем также наихудший результат среди всех моделей \"Дерево решений\".\n",
+    "AUC-ROC - также наихудший результат среди всех моделей \"Дерево решений\".\n",
     "\n",
     "Глубина дерева 7."
    ]
@@ -1935,18 +1949,11 @@
    "source": [
     "**ИТОГОВЫЕ ВЫВОДЫ по прогнозированию оттока клиентов**\n",
     "Итак, в результате проведённой работы выбраны следующие параметры:\n",
-    "- так как в данных имеем сильный четырёхкратный дисбаланс классов, к ним поочерёдно применял апсемплинг методом SMOTE, даунсемплинг методом RANDOMUNDERSAMPLER, а также использовал встроенные средства моделей для балансировки классов.\n",
+    "- так как в данных имею сильный четырёхкратный дисбаланс классов, к ним поочерёдно применял апсемплинг методом SMOTE, даунсемплинг методом RANDOMUNDERSAMPLER, а также использовал встроенные средства моделей для балансировки классов.\n",
     "- наилучшие результаты показала модель \"Случайный лес\", при использовании следующих гиперпараметров: глубина дерева - 79 (по умолчанию нет, ветвление идёт только вширь по количеству деревьев), количество деревьев: 31 (по умолчанию 100), с включенным встроенным средством балансировки.\n",
-    "- благодаря таким настройкам данная модель показывает высокие основные для нашей модели метрики \"Полнота\" и \"Точность\", характеризующие качество предсказания положительного класса (\"клиент покинул банк\")\n",
-    "- после обучения, валидации и тестирования модели, на имеющихся данных (10 000 клиентов, из которых 2 037 уже покинуло банк), модель спрогнозировала уход ещё 1012 клиентов."
+    "- благодаря таким настройкам модель показывает высокие основные для нашей модели метрики \"Полнота\" и \"Точность\", характеризующие качество предсказания положительного класса (\"клиент покинул банк\")\n",
+    "- после обучения, валидации и тестирования модели, на данных (10 000 клиентов, из которых 2 037 уже покинуло банк), модель спрогнозировала уход ещё 1012 клиентов."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
