Update Классификаиция клиентов телеком компании.ipynb

--- a/Классификаиция клиентов телеком компании/Классификаиция клиентов телеком компании.ipynb
+++ b/Классификаиция клиентов телеком компании/Классификаиция клиентов телеком компании.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Откроем и изучим файл"
+    "## Открою и изучу файл"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Загружаем необходимые в работе библиотеки\n",
+    "# Загружаю необходимые в работе библиотеки\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -319,10 +319,10 @@
    "metadata": {},
    "source": [
     "**Выводы по предварительному изучению данных:**\n",
-    "- имеем данные абонентов по количеству звонков, минут, отправленных сообщений, израсходованных мегабайт, факту подключения к тарифу \"Ультра\".\n",
+    "- имею данные абонентов по количеству звонков, минут, отправленных сообщений, израсходованных мегабайт, факту подключения к тарифу \"Ультра\".\n",
     "- пропусков в датасете нет. Тип данных позволит без ограничений провести необходимый анализ (преобразовывать нет необходимости).\n",
     "- всего имеем 3214 записей данных абонентов, этого более, чем достаточно для анализа.\n",
-    "- по количеству звонков, минут, отправленных сообщений, израсходованных мегабайт (наши признаки для анализа) - данные очень сильно разнятся.\n",
+    "- по количеству звонков, минут, отправленных сообщений, израсходованных мегабайт (признаки для анализа) - данные очень сильно разнятся.\n",
     "- касательно сбалансированности таргетов: к тарифу \"Ультра\" подключено всего 985 абонентов из 3214 (30,6%, несбалансирован)"
    ]
   },
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Разобъём данные на выборки"
+    "## Разобъю данные на выборки"
    ]
   },
   {
@@ -349,13 +349,13 @@
     }
    ],
    "source": [
-    "# Разделяем данные на свойства и цель\n",
+    "# Разделяю данные на свойства и цель\n",
     "features = df.drop(['is_ultra'], axis=1)\n",
     "target = df['is_ultra']\n",
-    "# Делим выборки на Обучающие 60% и Тестовые\n",
+    "# Делю выборки на Обучающую 60% и Тестовую\n",
     "features_train, features_test, target_train, target_test = train_test_split(features, target, test_size=0.4,\n",
     "                                                                            random_state=12345, stratify=target)\n",
-    "# Тестовые выборки делим пополам, для получения Валидационных выборок\n",
+    "# Тестовые выборки делю пополам, для получения Валидационных выборок\n",
     "features_valid, features_test, target_valid, target_test = train_test_split(\n",
     "    features_test, target_test, test_size=0.5, random_state=12345, stratify=target_test)\n",
     "print(\"Признаки в Обучающей выборке:\", features_train.shape, \"Цель Обучающей выборки:\", target_train.shape)\n",
@@ -367,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Исследуем модели"
+    "## Исследую модели"
    ]
   },
   {
@@ -420,7 +420,7 @@
     "        best_depth_tree = depth\n",
     "print(\"accuracy наилучшей модели на валидационной выборке:\", best_accuracy_tree, \"Глубина дерева:\", best_depth_tree)\n",
     "\n",
-    "#  на основании двух списков строим график\n",
+    "#  на основании двух списков строю график\n",
     "plt.figure(figsize=(12, 4))\n",
     "plt.plot(list_valid, label = 'Валидационная')\n",
     "plt.plot(list_train, label = 'Обучающая')\n",
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "# Строим дерево\n",
+    "# Строю дерево\n",
     "model = DecisionTreeClassifier(random_state=12345, max_depth=3)\n",
     "tr = model.fit(features_train, target_train)\n",
     "tree.plot_tree(tr, fontsize=8);"
@@ -534,7 +534,7 @@
     "<div class=\"alert alert-info\">\n",
     "Выводы:\n",
     "    \n",
-    "- Применили три вида моделей: \"Дерево решений\"(DT), \"Случайный лес\"(RF), и \"Логистическая регрессия\"(LR).\n",
+    "- Применил три вида моделей: \"Дерево решений\"(DT), \"Случайный лес\"(RF), и \"Логистическая регрессия\"(LR).\n",
     "    \n",
     "- В модели DT на валидации при увеличении глубины дерева - метрика качества стала снижаться, в то время, как на обучающей выборке она растёт. Это связано с переобучением модели (т.е. модель хорошо запомнила ответы, но не поняла сути)\n",
     "\n",
@@ -542,7 +542,7 @@
     "    \n",
     "- В модели LR слово «регрессия»  присутствует потому, что в процессе её обучения выявляется некая зависимость, устанавливающая соответствие между случайными переменными на входе. Таким способом решается задача классификации.\n",
     "    \n",
-    "- Логистическая регрессия использует логистическую связь для соединения выходных и входных данных. В ней существует одна гладкая линейная граница принятия решения. Поэтому она показала нам результаты хуже, чем две другие модели.\n",
+    "- Логистическая регрессия использует логистическую связь для соединения выходных и входных данных. В ней существует одна гладкая линейная граница принятия решения. Поэтому она показала результаты хуже, чем две другие модели.\n",
     "</div>"
    ]
   },
@@ -551,7 +551,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\">\n",
-    "Дообучим выбранную нами модель RF, на обучающей + валидационной выборке:\n",
+    "Дообучу выбранную модель RF, на обучающей + валидационной выборке:\n",
     "</div>"
    ]
   },
@@ -568,7 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Проверим модель на тестовой выборке"
+    "## Проверю модель на тестовой выборке"
    ]
   },
   {
@@ -603,14 +603,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Проверим модели на адекватность"
+    "## Проверю модели на адекватность"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для проверки используем классификатор DummyClassifier."
+    "Для проверки использую классификатор DummyClassifier."
    ]
   },
   {
@@ -638,7 +638,7 @@
    "metadata": {},
    "source": [
     "**Вывод**\n",
-    "Accuracy модели DummyClassifier (0.693) ниже, чем у нашей модели \"Случайный лес\" (0.829) - модель адекватна и эффективна."
+    "Accuracy модели DummyClassifier (0.693) ниже, чем у модели \"Случайный лес\" (0.829) - модель адекватна и эффективна."
    ]
   },
   {
@@ -654,7 +654,7 @@
     "    \n",
     "- Далее выбранная модель была дообучена, на объединённой выборке (тестовая + валидационная)\n",
     "    \n",
-    "- Модели была проверена на тестовой выборке. Результат на дообученной модели теперь стал даже выше - Accuracy=0.8289;\n",
+    "- Модель была проверена на тестовой выборке. Результат на дообученной модели теперь стал даже выше - Accuracy=0.8289;\n",
     "- Модель проверена на вменяемость. Для проверки использовалась модель DummyClassifier, которая показала результат Accuracy - 0.693.\n",
     "</div>"
    ]
