Update анализ рынка недвижимости в Санкт-Петербурге.ipynb

--- a/Продажа квартир в Санкт-Петербурге — анализ рынка недвижимости/анализ рынка недвижимости в Санкт-Петербурге.ipynb
+++ b/Продажа квартир в Санкт-Петербурге — анализ рынка недвижимости/анализ рынка недвижимости в Санкт-Петербурге.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Исследование объявлений о продаже квартир\n",
     "\n",
-    "В нашем распоряжении данные сервиса Яндекс.Недвижимость — архив объявлений о продаже квартир в Санкт-Петербурге и соседних населённых пунктов за несколько лет. Нужно научиться определять рыночную стоимость объектов недвижимости. Наша задача — установить параметры. Это позволит построить автоматизированную систему: она отследит аномалии и мошенническую деятельность. \n",
+    "В распоряжении данные сервиса Яндекс.Недвижимость — архив объявлений о продаже квартир в Санкт-Петербурге и соседних населённых пунктов за несколько лет. Нужно научиться определять рыночную стоимость объектов недвижимости. Задача — установить параметры. Это позволит построить автоматизированную систему: она отследит аномалии и мошенническую деятельность. \n",
     "\n",
     "По каждой квартире на продажу доступны два вида данных. Первые вписаны пользователем, вторые — получены автоматически на основе картографических данных. Например, расстояние до центра, аэропорта, ближайшего парка и водоёма. "
    ]
@@ -19,7 +19,7 @@
     "выполнить предобработку данных и изучить их, чтобы найти интересные особенности и зависимости, которые существуют на рынке недвижимости.\n",
     "\n",
     "**Ход исследования**\n",
-    "Данные мы получим из файла /datasets/real_estate_data.csv О качестве данных ничего не известно. Поэтому прежде всего понадобится обзор данных.\n",
+    "Данные я получу из файла /datasets/real_estate_data.csv О качестве данных ничего не известно. Поэтому прежде всего понадобится обзор данных.\n",
     "\n",
     "Исследование пройдёт в пять этапов:\n",
     "\n",
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Открываем файл с данными и изучаем общую информацию. "
+    "### Открываю файл с данными и изучаю общую информацию. "
    ]
   },
   {
@@ -306,29 +306,29 @@
     }
    ],
    "source": [
-    "# Последовательно меняя названия столбцов в коде ниже, проанализируем имеющиеся пропуски и причины\n",
+    "# Последовательно меняя названия столбцов в коде ниже, проанализирую имеющиеся пропуски и причины\n",
     "# их возникновения.\n",
     "# print(df[df['ceiling_height'].isna()].head(10))\n",
-    "# Заменим пропуски числа балконов (связаны с тем, что их нет) на 0\n",
+    "# Заменю пропуски числа балконов (связаны с тем, что их нет) на 0\n",
     "df['balcony'] = df['balcony'].fillna(0).astype('int')\n",
-    "# Заменим пропуски по числу парков в радиусе 3км (связаны с тем, что их нет) на 0\n",
+    "# Заменю пропуски по числу парков в радиусе 3км (связаны с тем, что их нет) на 0\n",
     "df['parks_around3000'] = df['parks_around3000'].fillna(0).astype('int')\n",
-    "# Заменим пропуски по числу водоёмов в радиусе 3км (связаны с тем, что их нет) на 0\n",
+    "# Заменю пропуски по числу водоёмов в радиусе 3км (связаны с тем, что их нет) на 0\n",
     "df['ponds_around3000'] = df['ponds_around3000'].fillna(0).astype('int')\n",
-    "# Удалим строки при наличии пропуска в столбце названия населённого пункта 'locality_name'\n",
+    "# Удалю строки при наличии пропуска в столбце названия населённого пункта 'locality_name'\n",
     "# (всего 49 строк из 23699, можно смело идалить)\n",
     "df = df.dropna(subset=['locality_name'])\n",
     "# Т.к. пропуски в столбце \"всего этажей в доме\" ('floors_total') вызваны тем, что этаж последний,\n",
-    "#  заменим их значением из столбца 'floor'\n",
+    "#  заменю их значением из столбца 'floor'\n",
     "df['floors_total'] = df['floors_total'].fillna('floors')\n",
-    "# 85 строк имеют значение \"floors\". Также примем, что это последний этаж\n",
+    "# 85 строк имеют значение \"floors\". Также приму, что это последний этаж\n",
     "df.loc[df['floors_total'] == 'floors','floors_total'] = df['floor']\n",
-    "# \"Аппартаменты\" Если в столбце NaN - меняем на False\n",
+    "# \"Аппартаменты\" Если в столбце NaN - меняю на False\n",
     "df['is_apartment'] = df['is_apartment'].fillna(False)\n",
-    "# Заполним пропуски в жилой площади медианным значением\n",
+    "# Заполню пропуски в жилой площади медианным значением\n",
     "df.loc[df['living_area'].isna(),'living_area'] = (df['total_area'] * df['living_area'].median()\n",
     "     / df['total_area'].median())\n",
-    "# Проверяем:\n",
+    "# Проверяю:\n",
     "df.info()"
    ]
   },
@@ -341,11 +341,11 @@
     "- Расстояние до центра города\n",
     "- Расстояние до ближайшего парка\n",
     "- Расстояние до ближайшего водоёма\n",
-    "    Это картографические данные. Оставим пока данные пропуски, возможно, они не понадобятся нам при анализе.\n",
-    "- Высота потолков. Пока оставим пропуски.\n",
-    "- Сколько дней было размещено объявление до снятия - наличие пропуска означает, что объявление не снято с публикации. Оставим пропуск.\n",
-    "- Площадь кухни. Пропуск может быть вызван либо отсутствием кухни (коммуналка, аппартаменты, студия, перепланировка), либо не добавленной информацией пользователем. Оставим пропуски.\n",
-    "- Жилая площадь. Причины возникновения пропусков - аналогичны пропускам в Площади кухни. данные пропуски заменим медианным значением, исходя из общей площади квартиры."
+    "    Это картографические данные. Оставлю пока данные пропуски, возможно, они не понадобятся при анализе.\n",
+    "- Высота потолков. Пока оставлю пропуски.\n",
+    "- Сколько дней было размещено объявление до снятия - наличие пропуска означает, что объявление не снято с публикации. Оставлю пропуск.\n",
+    "- Площадь кухни. Пропуск может быть вызван либо отсутствием кухни (коммуналка, аппартаменты, студия, перепланировка), либо не добавленной информацией пользователем. Оставлю пропуски.\n",
+    "- Жилая площадь. Причины возникновения пропусков - аналогичны пропускам в Площади кухни. данные пропуски заменю медианным значением, исходя из общей площади квартиры."
    ]
   },
   {
@@ -370,7 +370,7 @@
     }
    ],
    "source": [
-    "# Преобразуем данные столбца с датой и временем в соответствующий тип\n",
+    "# Преобразую данные столбца с датой и временем в соответствующий тип\n",
     "df['first_day_exposition'] = pd.to_datetime(df['first_day_exposition'], format='%Y-%m-%dT%H:%M:%S')\n",
     "df['first_day_exposition'].head()"
    ]
@@ -389,14 +389,14 @@
     }
    ],
    "source": [
-    "# Работаем с дубликатами.\n",
+    "# Работаю с дубликатами.\n",
     "df.duplicated().sum()\n",
     "df = df.drop_duplicates()\n",
     "df.shape[0]\n",
     "# явных дубликатов неn\n",
-    "# Выявим неявные дыбликаты:\n",
+    "# Выявлю неявные дыбликаты:\n",
     "# print(df['locality_name'].unique())\n",
-    "# Устраним неявные дубликаты:\n",
+    "# Устраню неявные дубликаты:\n",
     "duplicates = ['посёлок', \"городской\", \"деревня\", \"поселок\", \"городского типа\", \"садовое\",\n",
     "              \"товарищество\", \"некоммерческое\", \"село\", \"станции\", \"при железнодорожной\",\n",
     "               \"коттеджный\", \"садоводческое\"]\n",
@@ -415,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Устраняем редкие, ошибочные, выбивающиеся значения в высоте потолков:\n",
+    "# Устраняю редкие, ошибочные, выбивающиеся значения в высоте потолков:\n",
     "#df = df.replace({'ceiling_height':{100:10, 32:3.2, 27.5:2.75, 27:2.7, 26:2.6, 25:2.5, 24:2.4,\n",
     "#                                    22.6:2.26, 20:2}})\n",
     "\n",
@@ -454,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Устраняем редкие, ошибочные, выбивающиеся значения в общей площади:\n",
+    "# Устраняю редкие, ошибочные, выбивающиеся значения в общей площади:\n",
     "# df = df.replace({'total_area':{590.0:59, 618.0:61.8, 631.0:63.1, 631.2:63.12, 900.0:90}})\n",
     "max_param = 520\n",
     "df['total_area'] = df['total_area'].apply(data_error).round(1)"
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Преобразуем данные остальных столбцов в соответствующий тип\n",
+    "# Преобразую данные остальных столбцов в соответствующий тип\n",
     "df['last_price'] = df['last_price'].astype('int')\n",
     "df['floors_total'] = df['floors_total'].astype('int')\n",
     "df['living_area'] = df['living_area'].round(1)"
@@ -478,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Обновим индексацию датафрейма\n",
+    "# Обновлю индексацию датафрейма\n",
     "df = df.reset_index(drop=True)"
    ]
   },
@@ -501,7 +501,7 @@
     }
    ],
    "source": [
-    "# Изучим датасет на предмет количества комнат\n",
+    "# Изучу датасет на предмет количества комнат\n",
     "# print(sorted(df['rooms'].unique()))\n",
     "df.boxplot('rooms');"
    ]
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Из диаграммы размаха видим, что в объявлениях в основном представлены помещения с количеством комнат до шести.\n",
+    "Из диаграммы размаха видно, что в объявлениях в основном представлены помещения с количеством комнат до шести.\n",
     "Медианное значение - две комнаты. Присутствуют \"выбросы\" - где до 19 комнат."
    ]
   },
@@ -564,17 +564,17 @@
    "metadata": {},
    "source": [
     "Какие особенности в данных обнаружены, и какие действия были предприняты:\n",
-    "- в колонке с количеством балконов были пропуски. Приняли - что в данном случае балкона нет (заменили пропуски на 0)\n",
-    "- были пропуски в числе парков в радиусе 3км. Приняли, что в этом случае парка нет, поставили 0\n",
-    "- были пропуски в числе парков в радиусе 3км. Приняли, что в этом случае парка нет, поставили 0\n",
-    "- были пропуски в количестве водоёмов в радиусе 3км. Приняли, что в этом случае его нет, поставили 0\n",
-    "- удалили строки при наличии пропуска в столбце названия населённого пункта 'locality_name' (49 строк из 23699)\n",
-    "- пропуски, а также значения 'floor' в столбце \"всего этажей в доме\" ('floors_total') вызваны тем, что этаж последний, заменили их значением из столбца 'floor'\n",
-    "- в столбце \"Аппартаменты\" значения NaN заменили на False\n",
-    "- у столбцов 'first_day_exposition' и 'floors_total' преобразовали тип данных.\n",
-    "- устранили неявные дубликаты в столбце 'locality_name'\n",
-    "- устранили редкие, ошибочные, выбивающиеся значения в высоте потолков и в общей площади\n",
-    "- заменили имеющиеся пропуски в жилой площади квартиры медианным значением, исходя из общей площади квартиры.\n",
+    "- в колонке с количеством балконов были пропуски. Принял - что в данном случае балкона нет (заменил пропуски на 0)\n",
+    "- были пропуски в числе парков в радиусе 3км. Принял, что в этом случае парка нет, поставил 0\n",
+    "- были пропуски в числе парков в радиусе 3км. Принял, что в этом случае парка нет, поставил 0\n",
+    "- были пропуски в количестве водоёмов в радиусе 3км. Принял, что в этом случае его нет, поставил 0\n",
+    "- удалил строки при наличии пропуска в столбце названия населённого пункта 'locality_name' (49 строк из 23699)\n",
+    "- пропуски, а также значения 'floor' в столбце \"всего этажей в доме\" ('floors_total') вызваны тем, что этаж последний, заменил их значением из столбца 'floor'\n",
+    "- в столбце \"Аппартаменты\" значения NaN заменил на False\n",
+    "- у столбцов 'first_day_exposition' и 'floors_total' преобразовал тип данных.\n",
+    "- устранил неявные дубликаты в столбце 'locality_name'\n",
+    "- устранил редкие, ошибочные, выбивающиеся значения в высоте потолков и в общей площади\n",
+    "- заменил имеющиеся пропуски в жилой площади квартиры медианным значением, исходя из общей площади квартиры.\n",
     "- обнаружены квартиры с высотой пололков до 10 метров - это какие-то аномалии\n",
     "- обнаружены квартиры площадью до 500м2, количество комнат достигает 19. Это также является какими-то аномалиями."
    ]
@@ -583,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Посчитаем и добавим в таблицу новые столбцы"
+    "### Посчитаю и добавлю в таблицу новые столбцы"
    ]
   },
   {
@@ -799,7 +799,7 @@
     }
    ],
    "source": [
-    "# Рассчитаем цену 1м2\n",
+    "# Рассчитаю цену 1м2\n",
     "df['one_square_price'] = df['last_price'] / df['total_area']\n",
     "# День недели публикации объявления (0-пн, 1-вт, 2-ср. и т.д.)\n",
     "df['weekday'] = df['first_day_exposition'].dt.weekday\n",
@@ -849,7 +849,7 @@
     }
    ],
    "source": [
-    "# Посмотрим, за какие годы в нашем датасете присутствуют объявления:\n",
+    "# Посмотрю, за какие годы в датасете присутствуют объявления:\n",
     "df.groupby('year')['year'].count()"
    ]
   },
@@ -857,7 +857,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Проведём исследовательский анализ данных"
+    "### Проведу исследовательский анализ данных"
    ]
   },
   {
@@ -2103,7 +2103,7 @@
     "scrolled": false
    },
    "source": [
-    "**Построим матрицы диаграмм рассеяния для общей стоимости объекта, общей площади, жилой площади,площади кухни, количества комнат, этажа квартиры, дня недели размещения, месяца и года размещения**"
+    "**Построю матрицы диаграмм рассеяния для общей стоимости объекта, общей площади, жилой площади, площади кухни, количества комнат, этажа квартиры, дня недели размещения, месяца и года размещения**"
    ]
   },
   {
@@ -2378,7 +2378,7 @@
     }
    ],
    "source": [
-    "# Подсчитаем среднюю цену 1м2 в 10 населённых пунктах с наибольшим числом объявлений\n",
+    "# Подсчитаю среднюю цену 1м2 в 10 населённых пунктах с наибольшим числом объявлений\n",
     "df_price = df.groupby('locality_name').agg({'one_square_price':['count', 'median']})\n",
     "df_price.columns = ['count', 'median_price']\n",
     "df_price['median_price'] = df_price['median_price'].astype(int)\n",
@@ -2401,7 +2401,7 @@
     }
    ],
    "source": [
-    "# Рассчитаем среднюю стоимость 2-х комнатной квартиры в Санкт-Петербурге, на расстоянии 2км. от центра:\n",
+    "# Рассчитаю среднюю стоимость 2-х комнатной квартиры в Санкт-Петербурге, на расстоянии 2км. от центра:\n",
     "price_centre = df.loc[(df['locality_name']=='Санкт-Петербург') & (df['distance_center_km'] < 0.4) & \n",
     "                      (df['rooms'] == 2)]['one_square_price'].median()\n",
     "# И то же самое - для квартир на расстоянии 258км. от центра:\n",
@@ -2448,12 +2448,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В процессе проведённого исследования объявлений сервиса \"Яндекс.Недвижимость\" по продаже квартир в Ленинградскиий области за 2014-2019 годы, мы:\n",
-    "1) Выполнили предобработку данных (избавились от пропусков, дубликатов, выявили аномалии, преобразовали типы данных)\n",
+    "В процессе проведённого исследования объявлений сервиса \"Яндекс.Недвижимость\" по продаже квартир в Ленинградскиий области за 2014-2019 годы, сделал следущее:\n",
+    "1) Выполнил предобработку данных (избавился от пропусков, дубликатов, выявил аномалии, преобразовал типы данных)\n",
     "\n",
-    "2) Добавили в таблицу новые данные с недостающими параметрами: цена 1м2, день недели, месяц и год публикации объявления, тип этажа квартиры и расстояние до центра города в км.\n",
+    "2) Добавил в таблицу новые данные с недостающими параметрами: цена 1м2, день недели, месяц и год публикации объявления, тип этажа квартиры и расстояние до центра города в км.\n",
     "\n",
-    "3) Провели исследовательский анализ данных: построили гистограммы распределения по всем основным параметрам жилья, проанализировали длительность продажи, построили матрицу корреляции и диаграммы рассеяния по всем основным признакам, провели анализ взаимосвязи расстояния от центра города и цены за м2.\n",
+    "3) Провёл исследовательский анализ данных: построил гистограммы распределения по всем основным параметрам жилья, проанализировал длительность продажи, построил матрицу корреляции и диаграммы рассеяния по всем основным признакам, провёл анализ взаимосвязи расстояния от центра города и цены за м2.\n",
     "\n",
     "\n",
     "В результате, можно сделать следующие выводы:\n",
