--- a/Прогнозирование оттока клиентов телеком компании/Прогнозирование оттока клиентов телеком компании.ipynb
+++ b/Прогнозирование оттока клиентов телеком компании/Прогнозирование оттока клиентов телеком компании.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Цель-исследования:\" data-toc-modified-id=\"Цель-исследования:-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Цель исследования:</a></span><ul class=\"toc-item\"><li><span><a href=\"#Описание-услуг\" data-toc-modified-id=\"Описание-услуг-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Описание услуг</a></span></li><li><span><a href=\"#Описание-данных\" data-toc-modified-id=\"Описание-данных-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Описание данных</a></span></li><li><span><a href=\"#Данные\" data-toc-modified-id=\"Данные-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Данные</a></span></li><li><span><a href=\"#План-проекта\" data-toc-modified-id=\"План-проекта-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>План проекта</a></span></li><li><span><a href=\"#План--действий\" data-toc-modified-id=\"План--действий-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>План  действий</a></span></li></ul></li><li><span><a href=\"#Исследовательский-анализ-данных\" data-toc-modified-id=\"Исследовательский-анализ-данных-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Исследовательский анализ данных</a></span></li><li><span><a href=\"#Часть-2.-Подготовка-данных,-работа-с-моделями\" data-toc-modified-id=\"Часть-2.-Подготовка-данных,-работа-с-моделями-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Часть 2. Подготовка данных, работа с моделями</a></span></li><li><span><a href=\"#Часть-3.-Отчёт\" data-toc-modified-id=\"Часть-3.-Отчёт-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Часть 3. Отчёт</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Цель-исследования:\" data-toc-modified-id=\"Цель-исследования:-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Цель исследования:</a></span><ul class=\"toc-item\"><li><span><a href=\"#Описание-услуг\" data-toc-modified-id=\"Описание-услуг-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Описание услуг</a></span></li><li><span><a href=\"#Описание-данных\" data-toc-modified-id=\"Описание-данных-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Описание данных</a></span></li><li><span><a href=\"#Данные\" data-toc-modified-id=\"Данные-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Данные</a></span></li><li><span><a href=\"#План-проекта\" data-toc-modified-id=\"План-проекта-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>План проекта</a></span></li><li><span><a href=\"#План--действий\" data-toc-modified-id=\"План--действий-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>План  действий</a></span></li></ul></li><li><span><a href=\"#Исследовательский-анализ-данных\" data-toc-modified-id=\"Исследовательский-анализ-данных-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Исследовательский анализ данных</a></span></li><li><span><a href=\"#Подготовка-данных,-работа-с-моделями\" data-toc-modified-id=\"Подготовка-данных,-работа-с-моделями-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Подготовка данных, работа с моделями</a></span></li><li><span><a href=\"#Отчёт\" data-toc-modified-id=\"Отчёт-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Отчёт</a></span></li></ul></div>"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Часть 1. Описание задачи проекта, описание пути её достижения, анализ имеющихся данных."
+    "# Описание задачи проекта, описание пути её достижения, анализ имеющихся данных."
    ]
   },
   {
@@ -15014,7 +15014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Часть 2. Подготовка данных, работа с моделями"
+    "## Подготовка данных, работа с моделями"
    ]
   },
   {
@@ -16260,7 +16260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Часть 3. Отчёт"
+    "## Отчёт"
    ]
   },
   {
